# magic_interview_api

./: .env  .gitignore  config.py  main.py  pyproject.toml
app/: __init__.py  db.py  models.py
app/routes/: post.py
